Fixed duplicate css files. Fixed spacing and height of slide outs.

--- a/frontend/app/css/app.css
+++ b/frontend/app/css/app.css
@@ -55,11 +55,54 @@
 }
 
 /* Sidebar Styles */
+#wrapper {
+    padding-left: 0;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+}
+
+#wrapper.toggled {
+    padding-left: 250px;
+}
+
+#sidebar-wrapper {
+    z-index: 1000;
+    position: fixed;
+    left: 250px;
+    width: 0;
+    height: 100%;
+    margin-left: -250px;
+    overflow-y: auto;
+    background: #000;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+}
+
+#wrapper.toggled #sidebar-wrapper {
+    width: 250px;
+}
+
+#page-content-wrapper {
+    width: 100%;
+    position: absolute;
+    padding: 15px;
+}
+
+#wrapper.toggled #page-content-wrapper {
+    position: absolute;
+    margin-right: -250px;
+}
+
+/* Sidebar Styles */
 
 .sidebar-nav {
     position: absolute;
-    top: 51px;
-    width: 200px;
+    top: 0;
+    width: 250px;
     margin: 0;
     padding: 0;
     list-style: none;
@@ -102,9 +145,9 @@
     background: none;
 }
 
-@media(min-width:700px) {
+@media(min-width:768px) {
     #wrapper {
-        padding-left: 200px;
+        padding-left: 250px;
     }
 
     #wrapper.toggled {
@@ -145,9 +188,10 @@ section {
 
 #logout {
     position: fixed;
-    top: 52px;
+    top: 50px;
     left: -350px;
     height: 100%;
+    width: 275px;
     background-color: #000;
     color: #999;
     transition: left .5s ease-in-out;
@@ -163,6 +207,7 @@ section {
     top: 50px;
     left: -350px;
     height: 100%;
+    width: 275px;
     background-color: #000;
     color: #999;
     transition: left .5s ease-in-out;
@@ -193,6 +238,7 @@ section {
     top: 50px;
     left: -350px;
     height: 100%;
+    width: 275px;
     background-color: #000;
     color: #999;
     transition: left .5s ease-in-out;
@@ -276,7 +322,7 @@ label {
 }
 
 #main-body.toggledPopOut {
-    margin-left: 500px;
+    margin-left: 525px;
 }
 
 
